@@ -5,14 +5,13 @@ import java.nio.file.Path;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
+import java.util.function.Supplier;
 import java.util.stream.Collectors;
 
 import javafx.stage.FileChooser;
 import javafx.util.Duration;
 
 import org.jabref.gui.DialogService;
-import org.jabref.gui.Globals;
-import org.jabref.gui.JabRefFrame;
 import org.jabref.gui.LibraryTab;
 import org.jabref.gui.StateManager;
 import org.jabref.gui.actions.ActionHelper;
@@ -22,12 +21,15 @@ import org.jabref.gui.icon.IconTheme;
 import org.jabref.gui.util.BackgroundTask;
 import org.jabref.gui.util.FileDialogConfiguration;
 import org.jabref.gui.util.FileFilterConverter;
+import org.jabref.gui.util.TaskExecutor;
 import org.jabref.logic.exporter.Exporter;
 import org.jabref.logic.exporter.ExporterFactory;
+import org.jabref.logic.journals.JournalAbbreviationRepository;
 import org.jabref.logic.l10n.Localization;
 import org.jabref.logic.util.io.FileUtil;
 import org.jabref.model.database.BibDatabaseContext;
 import org.jabref.model.entry.BibEntry;
+import org.jabref.model.entry.BibEntryTypesManager;
 import org.jabref.preferences.PreferencesService;
 
 import org.controlsfx.control.action.Action;
@@ -44,21 +46,30 @@ public class ExportCommand extends SimpleCommand {
     private static final Logger LOGGER = LoggerFactory.getLogger(ExportCommand.class);
 
     private final ExportMethod exportMethod;
-    private final JabRefFrame frame;
+    private final Supplier<LibraryTab> tabSupplier;
     private final StateManager stateManager;
     private final PreferencesService preferences;
     private final DialogService dialogService;
+    private final BibEntryTypesManager entryTypesManager;
+    private final JournalAbbreviationRepository abbreviationRepository;
+    private final TaskExecutor taskExecutor;
 
     public ExportCommand(ExportMethod exportMethod,
-                         JabRefFrame frame,
+                         Supplier<LibraryTab> tabSupplier,
                          StateManager stateManager,
                          DialogService dialogService,
-                         PreferencesService preferences) {
+                         PreferencesService preferences,
+                         BibEntryTypesManager entryTypesManager,
+                         JournalAbbreviationRepository abbreviationRepository,
+                         TaskExecutor taskExecutor) {
         this.exportMethod = exportMethod;
-        this.frame = frame;
+        this.tabSupplier = tabSupplier;
         this.stateManager = stateManager;
         this.preferences = preferences;
         this.dialogService = dialogService;
+        this.entryTypesManager = entryTypesManager;
+        this.abbreviationRepository = abbreviationRepository;
+        this.taskExecutor = taskExecutor;
 
         this.executable.bind(exportMethod == ExportMethod.EXPORT_SELECTED
                 ? ActionHelper.needsEntriesSelected(stateManager)
@@ -70,23 +81,22 @@ public class ExportCommand extends SimpleCommand {
         // Get list of exporters and sort before adding to file dialog
         ExporterFactory exporterFactory = ExporterFactory.create(
                 preferences,
-                Globals.entryTypesManager,
-                Globals.journalAbbreviationRepository);
+                entryTypesManager);
         List<Exporter> exporters = exporterFactory.getExporters().stream()
                                                   .sorted(Comparator.comparing(Exporter::getName))
                                                   .collect(Collectors.toList());
 
         FileDialogConfiguration fileDialogConfiguration = new FileDialogConfiguration.Builder()
                 .addExtensionFilter(FileFilterConverter.exporterToExtensionFilter(exporters))
-                .withDefaultExtension(preferences.getImportExportPreferences().getLastExportExtension())
-                .withInitialDirectory(preferences.getImportExportPreferences().getExportWorkingDirectory())
+                .withDefaultExtension(preferences.getExportPreferences().getLastExportExtension())
+                .withInitialDirectory(preferences.getExportPreferences().getExportWorkingDirectory())
                 .build();
         dialogService.showFileSaveDialog(fileDialogConfiguration)
                      .ifPresent(path -> export(path, fileDialogConfiguration.getSelectedExtensionFilter(), exporters));
     }
 
     private void export(Path file, FileChooser.ExtensionFilter selectedExtensionFilter, List<Exporter> exporters) {
-        String selectedExtension = selectedExtensionFilter.getExtensions().get(0).replace("*", "");
+        String selectedExtension = selectedExtensionFilter.getExtensions().getFirst().replace("*", "");
         if (!file.endsWith(selectedExtension)) {
             FileUtil.addExtension(file, selectedExtension);
         }
@@ -110,8 +120,8 @@ public class ExportCommand extends SimpleCommand {
 
         // Make sure we remember which filter was used, to set
         // the default for next time:
-        preferences.getImportExportPreferences().setLastExportExtension(format.getName());
-        preferences.getImportExportPreferences().setExportWorkingDirectory(file.getParent());
+        preferences.getExportPreferences().setLastExportExtension(format.getName());
+        preferences.getExportPreferences().setExportWorkingDirectory(file.getParent());
 
         final List<BibEntry> finEntries = entries;
 
@@ -120,17 +130,18 @@ public class ExportCommand extends SimpleCommand {
                     format.export(stateManager.getActiveDatabase().get(),
                             file,
                             finEntries,
-                            fileDirForDatabase);
+                            fileDirForDatabase,
+                            abbreviationRepository);
                     return null; // can not use BackgroundTask.wrap(Runnable) because Runnable.run() can't throw Exceptions
                 })
                 .onSuccess(save -> {
-                    LibraryTab.DatabaseNotification notificationPane = frame.getCurrentLibraryTab().getNotificationPane();
+                    LibraryTab.DatabaseNotification notificationPane = tabSupplier.get().getNotificationPane();
                     notificationPane.notify(
                             IconTheme.JabRefIcons.FOLDER.getGraphicNode(),
                             Localization.lang("Export operation finished successfully."),
                             List.of(new Action(Localization.lang("Reveal in File Explorer"), event -> {
                                 try {
-                                    JabRefDesktop.openFolderAndSelectFile(file, preferences, dialogService);
+                                    JabRefDesktop.openFolderAndSelectFile(file, preferences.getExternalApplicationsPreferences(), dialogService);
                                 } catch (IOException e) {
                                     LOGGER.error("Could not open export folder.", e);
                                 }
@@ -139,7 +150,7 @@ public class ExportCommand extends SimpleCommand {
                             Duration.seconds(5));
                 })
                 .onFailure(this::handleError)
-                .executeWith(Globals.TASK_EXECUTOR);
+                .executeWith(taskExecutor);
     }
 
     private void handleError(Exception ex) {
